fixed horizontal scrolling by removing 100vw from product list component, home component, in home component changed all 100vw to be 100%. Removed m=10 and changed to mx=5 my=10 on Home page simple grid

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
-body {
+* {
+  box-sizing: border-box;
+}
+
+html, body {
   overflow-x: hidden;
+  max-width: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
 }
